--- a/themes/roxo-custom/layouts/partials/head.html
+++ b/themes/roxo-custom/layouts/partials/head.html
@@ -1,13 +1,23 @@
 <head>
   <meta charset="utf-8" />
   <title>{{ .Title }}</title>
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="https://frontfabi.com.br/" />
-  <meta name="twitter:title" content="{{ .Title }}" />
+
+  <meta property="og:site_name" content="frontfabi" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="{{ .Title }}" />
   {{ with .Site.Params.description }}
-  <meta name="twitter:description" content="{{ . }}" />
+  <meta property="og:description" content="{{ . }}" />
   {{ end }}
-  <meta name="twitter:image" content="{{ "images/team/fabi-avatar.jpeg" | absURL }}" />
+  <meta property="og:url" content="https://frontfabi.com.br/" />
+  <meta property="og:image" content="{{ "images/team/fabi-avatar.jpeg" | absURL }}" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="{{ .Title }}" />
+  <meta name="twitter:url" content="https://frontfabi.com.br/" />
+  {{ with .Site.Params.description }}
+    <meta name="twitter:description" content="{{ . }}" />
+  {{ end }}
+  <meta name="twitter:image:src" content="{{ "images/team/fabi-avatar.jpeg" | absURL }}" />
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
