add twitter info SEO

--- a/themes/roxo-custom/layouts/partials/head.html
+++ b/themes/roxo-custom/layouts/partials/head.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://frontfabi.com.br/" />
   <meta property="og:image" content="{{ "images/team/fabi-avatar.jpeg" | absURL }}" />
 
-  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="{{ .Title }}" />
   <meta name="twitter:url" content="https://frontfabi.com.br/" />
   {{ with .Site.Params.description }}
