--- a/themes/roxo-custom/layouts/partials/blog.html
+++ b/themes/roxo-custom/layouts/partials/blog.html
@@ -14,7 +14,7 @@
           </div>
           
           <div class="site-blog-post-content">
-            <span>{{ .PublishDate.Format "January 2, 2006" }}</span>
+            <span>{{ .PublishDate.Format "02/01/2006" }}</span>
             <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
             <p>
               {{ .Summary }} ...
